Fix SonarQube issues in ms-project-service