@@ -1,6 +1,6 @@
 package tn.esprit.msprojectservice.services;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import tn.esprit.msprojectservice.dto.TaskDTO;
 import tn.esprit.msprojectservice.entities.Project;
@@ -10,16 +10,15 @@ import tn.esprit.msprojectservice.repositories.IProjectRepository;
 import tn.esprit.msprojectservice.repositories.ITaskRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class TaskServiceImpl implements ITaskService {
 
-    @Autowired
-    private ITaskRepository taskRepository;
+    private static final String TASK_NOT_FOUND = "Tâche non trouvée avec l'id : ";
 
-    @Autowired
-    private IProjectRepository projectRepository;
+    private final ITaskRepository taskRepository;
+    private final IProjectRepository projectRepository;
 
     @Override
     public TaskDTO createTask(Long projectId, TaskDTO taskDTO) {
@@ -40,7 +39,7 @@ public class TaskServiceImpl implements ITaskService {
     @Override
     public TaskDTO getTaskById(Long id) {
         Task task = taskRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Tâche non trouvée avec l'id : " + id));
+                .orElseThrow(() -> new RuntimeException(TASK_NOT_FOUND + id));
         return TaskDTO.fromEntity(task);
     }
 
@@ -49,13 +48,13 @@ public class TaskServiceImpl implements ITaskService {
         return taskRepository.findByProjectId(projectId)
                 .stream()
                 .map(TaskDTO::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public TaskDTO updateTask(Long id, TaskDTO taskDTO) {
         Task existing = taskRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Tâche non trouvée avec l'id : " + id));
+                .orElseThrow(() -> new RuntimeException(TASK_NOT_FOUND + id));
 
         existing.setTitle(taskDTO.getTitle());
         existing.setDescription(taskDTO.getDescription());
@@ -71,7 +70,7 @@ public class TaskServiceImpl implements ITaskService {
     @Override
     public TaskDTO updateTaskStatus(Long id, TaskStatus status) {
         Task existing = taskRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Tâche non trouvée avec l'id : " + id));
+                .orElseThrow(() -> new RuntimeException(TASK_NOT_FOUND + id));
 
         existing.setStatus(status);
         Task updated = taskRepository.save(existing);
@@ -85,7 +84,7 @@ public class TaskServiceImpl implements ITaskService {
     @Override
     public TaskDTO assignTask(Long id, Long assigneeId) {
         Task existing = taskRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Tâche non trouvée avec l'id : " + id));
+                .orElseThrow(() -> new RuntimeException(TASK_NOT_FOUND + id));
 
         existing.setAssigneeId(assigneeId);
         Task updated = taskRepository.save(existing);
@@ -95,7 +94,7 @@ public class TaskServiceImpl implements ITaskService {
     @Override
     public void deleteTask(Long id) {
         Task existing = taskRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Tâche non trouvée avec l'id : " + id));
+                .orElseThrow(() -> new RuntimeException(TASK_NOT_FOUND + id));
 
         Long projectId = existing.getProject().getId();
         taskRepository.delete(existing);
